# project_kafka_uptash

./: README.md  connect-kafka.ipynb  producer.pem  pyproject.toml  requirements.txt
albums/: consumer.py  data.csv  producer.py
artist/: consumer.py  producer.py
env/: pyvenv.cfg
tracks/: consumer.py  producer.py  tracks.ipynb
